tests/fixtures/svs-v3/invalid/raw-state-vector.hex
241ac918ca16070908046e6f6465080161d209d4046553f100d60101
